<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GeoTagger!</string>
    <string name="app_name">GeoTagger</string>
<string name="ranges_name">Picture Ranges</string>
<string name="from_name">From</string>
<string name="store_range_name">Store range</string>
<string name="range_message">Choose a range and press the button. The range will be stored together with your current position</string>
<string name="position_message">Press the button and your position will be stored together with the current time</string>
<string name="to_name">To</string>
<string name="choose_position_name">Choose Existing Position</string>
<string name="add_new_position_name">Add Position</string>
<string name="fast_add_new_position_name">Store Picture Range With Position</string>
<string name="ok_name">Ok</string>
<string name="add_range_name">+</string>
<string name="cancel_name">Cancel</string>
<string name="add_name">Add</string>
<string name="edit_name">Edit</string>
<string name="error_name">Error</string>
<string name="error_not_choosen_pos">You need to choose a valid position</string>
<string name="get_position_button_name">Get Position Now</string>
<string name="latitude_name">Latitude</string>
<string name="longitude_name">Longitude</string>
<string name="altitude_name">Altitude</string>
<string name="positon_name_name">Position Name</string>
<string name="update_position_name">Update Position</string>
<string name="positions_name">Positions</string>
<string name="are_u_sure_name">Are you sure of your choice?</string>
<string name="u_chose_position_name">Choose</string>
<string name="name_name">Name</string>
<string name="back_name">Back</string>
<string name="selected_range_name">Selected range</string>
<string name="selected_position_name">Selected position</string>
<string name="invalid_range_name">Invalid range</string>
<string name="file_name_name">geotagger.xml</string>
<string name="export_to_xml_name">Export to geotagger xml</string>
<string name="clean_all_name">Clean all</string>
<string name="are_u_sure_to_clean_name">Are you sure to clean all?</string>
<string name="gps_not_ready_name">Gps not ready yet</string>
<string name="gps_status_name">Gps Status</string>
<string name="xml_exported_name">The xml file produced must be processed with desktop applicaton available on the website</string>
<string name="gpx_exported_name">The standard gpx file produced must be processed with a suitable desktop applicaton</string>
<string name="xml_failed_name">Xml creation failed</string>
<string name="gps_error_name">Could not find valid position provider</string>
<string name="options_name">Settings</string>
<string name="gps_enabled_name">Enable Gps</string>
<string name="gps_enabled_summary">Check this to enable gps</string>
<string name="cell_enabled_name">Enable Cell Location</string>
<string name="cell_enabled_summary">Check this to enable cell location</string>
<string name="export_to_gpx_name">Export to generic gpx</string>
<string name="gpx_file_name">geotagger.gpx</string>
<string name="export_name">Export to sd</string>
<string name="address_name">Address</string>

<string name="update_dialog">Welcome to geotagger. You can choose between regular gpx files to be processed with any geotagging program, or range based file to be processed with
the application available on my website. When you choose to store the file on the sd the output file will be produced according to the option.
Check also my other app: DroidAlone</string>
</resources>
