<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >
<fede.geotagger.GpsReadyIndicator android:id="@+id/GpsReadyElemEditor" android:layout_width="fill_parent" android:layout_height="wrap_content"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingTop="15px">
	<TextView android:text="@string/from_name" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<EditText  android:id="@+id/FromEditText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number"  android:layout_weight="2">
	</EditText><TextView android:text="@string/to_name" android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<EditText android:id="@+id/ToEditText" android:layout_width="wrap_content" android:layout_height="wrap_content"  android:inputType="number"  android:layout_weight="2"></EditText>
	<Button android:text="@string/add_range_name" android:id="@+id/AddEndRangeButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="5px" android:layout_weight="1"></Button>
</LinearLayout>
 <View        android:layout_height="2dip" android:layout_width="fill_parent" android:background="#FF909090" />
<fede.geotagger.PositionListElem android:id="@+id/ChoosenPositionElem" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
<View        android:layout_height="2dip" android:layout_width="fill_parent" android:background="#FF909090" />

<Button android:text="@string/fast_add_new_position_name" android:id="@+id/FastAddNewPositionButton"  android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
<Button android:text="@string/add_new_position_name" android:id="@+id/AddNewPositionButton" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal"  android:layout_gravity="top">
	<Button android:text="@string/ok_name" android:id="@+id/RangeElemOkButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	<Button android:text="@string/choose_position_name" android:id="@+id/GetPositionButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>

</LinearLayout>