<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res/fede.geotagger"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    
    >
<fede.geotagger.GpsReadyIndicator android:id="@+id/GpsReadyElemEditor" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
 <View        android:layout_height="2dip" android:layout_width="fill_parent" android:background="#FF909090" android:paddingTop="5dip"/>
<TextView android:textSize="18dip" android:gravity="center_horizontal" android:paddingTop="10dip" android:paddingBottom="10dip" android:text="@string/range_message" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/text_color"></TextView>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="15px" android:paddingBottom="15px">
	<TextView android:text="@string/from_name" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/text_color"></TextView>
	<EditText  android:id="@+id/FromEditText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number"  android:layout_weight="2"></EditText>
	<TextView android:text="@string/to_name" android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/text_color"></TextView>
	<EditText android:id="@+id/ToEditText" android:layout_width="wrap_content" android:layout_height="wrap_content"  android:inputType="number"  android:layout_weight="2"></EditText>
	<Button android:text="@string/add_range_name" android:id="@+id/AddEndRangeButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="5dip" android:layout_weight="1"></Button>
</LinearLayout>
 <View        android:layout_height="2dip" android:layout_width="fill_parent" android:background="#FF909090" android:paddingTop="5dip"/>

<fede.geotagger.PositionListElem android:id="@+id/ChoosenPositionElem" android:layout_width="fill_parent" android:layout_height="wrap_content" app:textColor="@color/text_color"/>

<View        android:layout_height="2dip" android:layout_width="fill_parent" android:background="#FF909090"/>

<Button android:text="@string/fast_add_new_position_name" android:id="@+id/FastAddNewPositionButton"  android:layout_width="fill_parent" android:layout_height="wrap_content" >
android:</Button>

<View        android:layout_height="2dip" android:layout_width="fill_parent" android:background="#FF909090" />


	
	



</LinearLayout>