<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/PositionElemTable" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
<TableRow>
        <TextView
            android:text="@string/name_name"
            android:padding="3dip" 
            android:textColor="@color/position_indicator_color"/>
        <TextView
         android:id="@+id/position_elem_name"
         android:layout_width="fill_parent"
     android:layout_height="wrap_content"
          android:textColor="@color/text_color"
      />
    </TableRow>
<TableRow>
        <TextView
            android:text="@string/latitude_name"
            android:padding="3dip"
            android:textColor="@color/position_indicator_color" 
            />
        <TextView
         android:id="@+id/position_elem_latitude"
         android:layout_width="fill_parent"
     android:layout_height="wrap_content" 
     android:textColor="@color/text_color" />
    </TableRow>
<TableRow>
        <TextView
            android:text="@string/longitude_name"
            android:padding="3dip" 
            android:textColor="@color/position_indicator_color"
            />
        <TextView
         android:id="@+id/position_elem_longitude" 
         android:layout_width="fill_parent"
     android:layout_height="wrap_content" 
     android:textColor="@color/text_color"
     />
    </TableRow>
</TableLayout>